trunk/eea.geotags/branches/plone4/eea/geotags/skins/eea_geotags/eea.geotags.css
/* Dialog */
.geo-dialog {
  width: 100%;
  height: 100%;
  font-size: 0.7em;
}

.geo-dialog h2 {
  font-size: 1.4em;
}

.geo-splitter {
  border: 1px solid #8CACBB;
  width: 100%;
  height: 100%;
}

.geo-splitter .vsplitbar {
  width: 5px;
  background-color: #ffffff;
}

.geo-splitter .vsplitbar a {
  text-decoration: none;
  color: #8CACBB;
  font-size: 18px;
  border: 1px solid #8CACBB;
  background-color: #ffffff;

  opacity: 0.5;
  filter: alpha(opacity = 50);
}

.geo-splitter .vsplitbar a:hover {
  opacity: 1;
  filter: alpha(opacity = 100);
}

.geo-splitter .vsplitbar a {
  float: right;
  margin-left: 0px;
  margin-right: 4px;
  padding: 5px 5px 10px 5px;
  border-style: none none solid solid;
  -moz-border-radius-bottomleft:5px;
  -webkit-border-bottom-left-radius:5px;
}

.geo-leftside .vsplitbar a {
  float: left;
  margin-left: 4px;
  border-style: none solid solid none;
  -moz-border-radius-bottomright:5px;
  -webkit-border-bottom-right-radius:5px;
}

/* Left panel */
.geo-sidebar {
  height: 99%;
  overflow: hidden;
}

.geo-sidebar-area {
  height: 100%;
  border: none;
  min-width: 300px;
}

.geo-sidebar-button {
  height: 100%;
  font-size: 18px;
  color: #8CACBB;
  cursor: pointer;
  border-color: #8CACBB;
  border-width: 1px;
  border-style: solid none solid solid;
}

.geo-sidebar-button div {
  height: 30px;
}

.geo-sidebar-button:hover {
  background-color: #e9efcd;
}

.geo-hints {
  background: #FBF9EE;
  border: 1px dotted #95b229;
}

.geo-hints legend {
  margin-left: 1em;
}

.geo-suggestions {
  background: #FBF9EE;
  border: 1px dotted #95b229;
  padding: 1em;
  margin-top: 0.5em;
}

/* Sidebar area search results
------------------------------ */
.geo-results {
  height: 88%;
  padding: 0px;
}

.geo-results form {
  padding: 1em;
  width: 100%;
}

.geo-results input[type=text] {
  width: 70%;
}

.geo-results input[type=submit] {
  width: 20%;
}

.geo-results-area {
  height: 85%;
  overflow: auto;
}

.geo-results-area h3, .geo-results-area h4 {
  margin: 0px;
}

.geo-results-area .geo-point-view {
  cursor: pointer;
}

.geo-point-view {
  padding: 1em;
}

.geo-point-view .title {
  color: #578308;
  cursor: pointer;
  font-size: 115%;
  font-weight: normal;
}

.geo-point-view .subtitle {
  color: #495B6B;
  font-size: 95%;
  font-weight: normal;
}

.geo-point-view .tags {
  color: #95B229;
  font-size: 85%;
  font-weight: normal;
}

.geo-point-view .ui-icon {
  float: right;
  visibility: hidden;
  cursor: pointer;
}

.geo-point-view:hover {
  background: #FBF9EE;
  border: 1px dotted #95b229;
}

.geo-point-view:hover .ui-icon {
  visibility: visible;
}

.geo-mapcanvas {
  height: 100%;
  border: 1px solid #8CACBB;
}

.geo-preview-mapcanvas {
  height: 400px;
  border: 1px solid #8CACBB;
}

.geo-marker {
  padding-bottom: 1em;
  border: 1px dotted #ffffff;
  cursor: pointer;
}

.geo-marker .ui-icon {
  float: right;
  visibility: hidden;
  cursor: pointer;
}

.geo-marker:hover .ui-icon {
  visibility: visible;
}

.geo-marker:hover {
  background: #FBF9EE;
  border-color: #95b229;
}

.geo-marker .title {
  color: #578308;
  cursor: pointer;
  font-size: 115%;
  font-weight: normal;
}

.geo-marker .subtitle {
  color: #495B6B;
  font-size: 95%;
  font-weight: normal;
}

.geo-marker .tags {
  color: #95B229;
  font-size: 85%;
  font-weight: normal;
}

.geo-marker h3, .geo-marker h4 {
  margin: 0px;
}

.geo-preview-marker {
  padding-bottom: 1em;
  border: 1px dotted #ffffff;
  cursor: pointer;
}

.geo-preview-marker .title {
  color: #578308;
  cursor: pointer;
  font-size: 115%;
  font-weight: normal;
}

.geo-preview-marker .subtitle {
  color: #495B6B;
  font-size: 95%;
  font-weight: normal;
}

.geo-preview-marker .tags {
  color: #95B229;
  font-size: 85%;
  font-weight: normal;
}

.geo-preview-marker h3, .geo-preview-marker h4 {
  margin: 0px;
}

.geo-loading {
  background-image: url(../../++resource++geo-images/ajax-loader-small.gif);
  background-position: center top;
  background-repeat: no-repeat;
  height: 11px;
}

/* */

/* Advanced tab */
.geo-advanced select {
  width: 100%;
}

/* Right panel */
.geo-right {
  border-right: 1px solid #8CACBB;
  height: 100%;
}

.geo-basket {
  height: 100%;
  overflow: hidden;
}

.geo-basket-area h2 {
  margin-top: 0px;
}

.geo-basket-area {
  height: 100%;
}

.geo-basket-area h3, .geo-basket-area h4 {
  margin: 0px;
}

.geo-basket-items {
  padding: 1em;
  height: 92%;
  overflow: auto;
}

.geo-basket-items .ui-pulsate-item {
  background-color: #e9efcd;
}

/* Tabs */
.geo-sidebar-area ul.formTabs {
  background-color: #ddd;
  border: 0.3em solid #ddd;
}

.geo-sidebar-area ul.formTabs {
  display: block;
  border-style: solid solid none solid;
  margin-left: 0;
  border-top-right-radius: 0.5em;
  border-top-left-radius: 0.5em;
  -webkit-border-top-right-radius: 0.5em;
  -webkit-border-top-left-radius: 0.5em;
  -moz-border-radius-topleft: 0.5em;
  -moz-border-radius-topright: 0.5em;
}

.geo-sidebar-area li.formTab {
    display: inline;
    margin-right:0.25em;
}

.geo-sidebar-area li.formTab a {
    /* this isn't supported by all browsers, so we keep it in a separate rule */
    display: inline-block;
}

.geo-sidebar-area li.formTab a {
    line-height: 2em;
    padding: 0 0.75em;
    text-decoration: none;
    border: none;
    margin: 0 ;
}

.geo-sidebar-area li.formTab a.current {
    font-weight: bold;
}

.geo-sidebar-area li.formTab a.current,
.geo-sidebar-area li.formTab a:hover {
    background: White;
    color: Black;
}

.geo-sidebar-area .panes {
  border-width: 0px 1px 1px 1px;
  border-style: solid;
  border-color: #DDDDDD;
}

